<resources>
    <string name="app_name">My CV</string>
    <string name="text_notes">Hellooo, blz? Esse micro aplicativo tem todas as informações das tecnologias que eu possuo conhecimento e os níveis de conhecimento. Tem as minhas experiências, cursos, etc. Só clicar nos icons para me conhecer um pouquinho mais. Se tiver alguma dúvida, só clicar no icon de \"help\" que lá vai ter tudo explicadinho. :)</string>
    <string name="text_doc">Clicando neste botão você terá acesso ao QRcode que te levará para o arquivo do meu currículo. Você pode scanear ele ou apenas clicar no botão e você terá acesso a ele.</string>
    <string name="text_browser">Clicando neste botão você acessa meu LinkedIn e ele está disponível em português e em inglês.</string>
    <string name="text_language">Clicando neste botão você vê os idiomas que tenho conhecimento e os níveis.</string>
    <string name="text_planguage">Clicando neste botão você vai receber o meu nível de conhecimento nesta linguagem de programação.</string>
    <string name="text_android">Clicando neste botão você vai receber o meu nível de conhecimento em desenvolvimento mobile.</string>
    <string name="text_htmlcss">Clicando neste botão você vai receber o meu nível de conhecimento nesta linguagem.</string>

    <string name="alert">Eu possuo conhecimento básico nessa tecnologia, mas estou estudando para me desenvolver cada vez mais nela. :) </string>
    <string name="alert_language">Eu possuo conhecimento intermediário no idioma de inglês e conhecimento básico no idioma de espanhol. :)</string>

    <string name="language_title">Idioma</string>
    <string name="java_title">Java</string>
    <string name="javascript_title">Javascript</string>
    <string name="android_title">Android</string>
    <string name="html_title">HTML</string>
    <string name="css_title">CSS</string>
    <string name="kotlin_title">Kotlin</string>
    <string name="open_github">Abrir GitHub</string>
    <string name="project">Projetos</string>
    <string name="access">Acessar</string>
    <string name="close">Fechar</string>
    <string name="qrcode_title">Para acessar meu currículo, basta me escanear ou clicar em acessar. Vai ser rapidinho ;)</string>

</resources>