<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_border">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_title"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_access"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/back"
                android:text="@string/access"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/back"
                android:layout_marginBottom="20dp"
                android:text="@string/close"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>